--- a/client/src/sass/components/_plannow.scss
+++ b/client/src/sass/components/_plannow.scss
@@ -85,6 +85,7 @@
             left: 50%;
             top: 50%;
             transform: translate(-50%, -50%);
+            cursor: pointer;
           }
 
           .spinner {
